--- a/style.css
+++ b/style.css
@@ -8,8 +8,52 @@ html,body{
     width : 100%;
     height : 100%;
 }
+@font-face {
+    font-family: a;
+    src: url(jost-variable.ttf);
+}
+@font-face {
+    font-family: b;
+    src: url(Roboto.ttf);
+}
+@font-face {
+    font-family: c;
+    src: url(Roboto\ Medium.ttf);
+}
 
 #main{
     position: relative; /* is sai alag alag elements aur pages overlap nhi kareygey */
     overflow: hidden; /* hides irrelevant stuff that is poping out of the main element and hides scroll bar stuff */
+}
+#nav{
+    height: 14vh;
+    width: 100%;
+    /* background-color: yellow; */
+    position: absolute;
+    padding: 0 6vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#nav>img{
+    width: 6%;
+}
+#page1{
+    height: 100vh;
+    width: 100vw;    
+}
+#page1>video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+#right-nav>button{
+    margin: 1.5vh;
+    padding: 1.3vh 3.5vh;
+    border: 1px solid white;
+    border-radius: 5vh;
+    background: #0841DE;
+    color: white;
+    font-family: a;
+    font-size: 2.2vh;
 }
