--- a/style.css
+++ b/style.css
@@ -40,7 +40,9 @@ html,body{
 }
 #page1{
     height: 100vh;
-    width: 100vw;    
+    width: 100vw;   
+    position: relative;
+    /* why after removing this from the page 1 the bottom section made was not showing ? */
 }
 #page1>video{
     height: 100%;
@@ -57,3 +59,52 @@ html,body{
     font-family: a;
     font-size: 2.2vh;
 }
+.bottom-page1{
+    position: absolute;
+    height: 50vh;
+    bottom: 10%;
+    left: 9%;
+    font-family: a;
+}
+.bottom-page1>h1{
+    font-weight: 100;
+    color: white;
+    font-size: 14vh;
+    line-height: 1;
+
+}
+.bottom-page1-lower{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 8vh;
+    bottom: 0%;
+    font-size: 3vh;
+    position: absolute;
+    height: 30%;
+    width: 100%;
+}
+.bottom-page1-lower>h4{
+    font-size: 2.8vh;
+    color: white;
+    font-weight: 100;
+}
+.bottom-page1-lower>button{
+    padding: 2vh 7vh;
+    border: 1px solid white;
+    border-radius: 5vh;
+    background: white;
+    color: #0B4BF0;
+    font-family: a;
+    font-size: 2.2vh;
+    bottom: 0%;
+    margin-top: 6vh;
+}
+
+#page2{
+    height: 100vh;
+    width: 100vw;
+    background-color: blueviolet;
+    position: relative;
+}
+
