--- a/style.css
+++ b/style.css
@@ -104,7 +104,30 @@ html,body{
 #page2{
     height: 100vh;
     width: 100vw;
-    background-color: blueviolet;
+    background-color: #0A3CCE;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    font-family: a;
+}
+#page2-content{
+    width: 80%;
+    position: absolute;
+    left: 10%;
+}
+#page2>#page2-content>h2{
+    color: white;
+    font-weight: 100;
+    margin-bottom: 6vh;
+    font-size: 2.6vh;
+}
+#page2>#page2-content>h1{
+    font-weight: 100;
+    line-height: 1.2;
+    left: 8%;
+    font-size: 8.5vh;
+    color: white;
 }
 
